--- a/new/form.css
+++ b/new/form.css
@@ -31,10 +31,6 @@ body {
     height: 15rem;
 }
 
-main {
-
-    padding-bottom: 3.5rem;
-}
 
 h1 {
     font-size: 3rem;
@@ -56,7 +52,7 @@ form {
     max-width: 500px;
     min-width: 300px;
     margin: 0 auto;
-    margin-bottom: 20px;
+    margin-bottom: 5rem;
     padding-bottom: 2em;
     padding-left: 40px;
     padding-right: 40px;
@@ -81,7 +77,15 @@ label {
     margin: 0.5rem 0;
 }
 
-input,
+input{
+    width: 70%;
+    padding: 0.6rem;
+}
+
+#details input{
+    display: block;
+}
+
 textarea,
 select {
     margin: 10px 0 0 0;
@@ -124,6 +128,11 @@ a {
 
 a:hover {
     color: lightslategray;
+}
+
+button{
+    font-size: 2rem;
+    border-radius: 1rem;
 }
 
 @media only screen and (max-width: 800px) {
