--- a/game/game.css
+++ b/game/game.css
@@ -21,11 +21,11 @@
   }
   
   body.correct {
-    --hue: var(--hue-correct);
+    background-color: green;
   }
   
   body.wrong {
-    --hue: var(--hue-wrong);
+    background-color: red;
   }
   
   .container {
@@ -45,7 +45,7 @@
   }
   
   .btn {
-    --hue: var(--hue-neutral);
+    background-color: red;
     border: 1px solid hsl(var(--hue), 100%, 30%);
     background-color: hsl(var(--hue), 100%, 50%);
     border-radius: 5px;
@@ -59,7 +59,7 @@
   }
   
   .btn.correct {
-    --hue: var(--hue-correct);
+    background-color: green;
     color: black;
   }
   
@@ -82,66 +82,4 @@
   .hide {
     display: none;
   }
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  /* Background Styles Only */
-  
-  @import url('https://fonts.googleapis.com/css?family=Raleway');
-  
-  
-  html {
-      width: 100%;
-      height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: #DFDFDF;
-  }
-  
-  .side-links {
-    position: absolute;
-    top: 15px;
-    right: 15px;
-  }
-  
-  .side-link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
-    margin-bottom: 10px;
-    color: white;
-    width: 180px;
-    padding: 10px 0;
-    border-radius: 10px;
-  }
-  
-  .side-link-youtube {
-    background-color: red;
-  }
-  
-  .side-link-twitter {
-    background-color: #1DA1F2;
-  }
-  
-  .side-link-github {
-    background-color: #6e5494;
-  }
-  
-  .side-link-text {
-    margin-left: 10px;
-    font-size: 18px;
-  }
-  
-  .side-link-icon {
-    color: white;
-    font-size: 30px;
-  }
+
