--- a/game/game.css
+++ b/game/game.css
@@ -1,3 +1,8 @@
+html{
+  font-size: 24px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 *, *::before, *::after {
     box-sizing: border-box;
   }
@@ -29,11 +34,14 @@
   }
   
   .container {
+    font-size: 1.5rem;
+    text-align: center;
     width: 800px;
     max-width: 80%;
-    background-color: white;
+    background-color:honeydew;
     border-radius: 5px;
-    padding: 10px;
+
+    padding: 40px 20px;
     box-shadow: 0 0 10px 2px;
   }
   
@@ -49,9 +57,10 @@
     border: 1px solid hsl(var(--hue), 100%, 30%);
     background-color: hsl(var(--hue), 100%, 50%);
     border-radius: 5px;
-    padding: 5px 10px;
+    padding: 15px 30px;
     color: white;
     outline: none;
+    font-size: 1rem;
   }
   
   .btn:hover {
