--- a/game/data.css
+++ b/game/data.css
@@ -3,6 +3,7 @@ body{
     background:linear-gradient(45deg,navy,red);
     margin-top: 50px;
     font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 0px;
 }
 
 h1{
@@ -12,11 +13,12 @@ h1{
 }
 
 form{
-margin: 82.5px auto;
+margin: 82.5px auto 220px auto;
 border: 3px solid white;
 width: 40%;
 border-radius: 15px;
 background-color: linear-gradient(45deg,red,navy);
+
 }
 
 input{
