--- a/new/form.css
+++ b/new/form.css
@@ -4,10 +4,11 @@ html {
 }
 
 body {
+
     width: 100%;
     height: 100vh;
     margin: 0;
-    background: linear-gradient(90deg, #FCB0C0, #FBC9D2);
+    background-image: url(/images/mario.webp);
     color: #191213;
     font-size: 1rem;
     padding-top: 5rem ;
@@ -25,6 +26,7 @@ p {
 
 h1,
 p {
+    color: white;
     margin: 1rem auto;
     text-align: center;
 }
@@ -41,7 +43,7 @@ form {
     padding-right: 40px;
     border: #0a0a23 groove 4px;
     border-radius: 3%;
-    background: linear-gradient(90deg, #FCB0C0, #FBC9D2);
+    background: linear-gradient(90deg, cyan, aliceblue);
     box-shadow: 5px 5px #0a0a23;
 }
 
