--- a/new/main.css
+++ b/new/main.css
@@ -9,6 +9,10 @@ h3{
     font-size: 6rem;
 }
 
+header{
+    margin: -73px;
+}
+
 
 body{
     margin: 0;
@@ -17,6 +21,7 @@ body{
 }
 
 main{
+    margin-top: 120px;
     width: 100%;
 }
 
@@ -118,6 +123,7 @@ iframe{
     place-items: center;
     margin: 0 auto;
 }
+
 
 
 @media only screen and (max-width: 800px) {
