--- a/game/game.css
+++ b/game/game.css
@@ -37,8 +37,8 @@ html{
 
   #score{
     position: absolute;
-   
-    right: 1300px;
+    right: 1200px;
+    font-size: 50px;
   }
 #links{
   font-size: 1rem;
@@ -46,9 +46,14 @@ html{
   color:white;
   display: block;
   position: absolute;
-  
   width: 20%;
 }
+
+a:hover{
+  background-color: rgba(255, 255, 255, 0.589);
+}
+
+
 a{
   border: 3px solid white;
   border-radius: 8px;
@@ -59,6 +64,9 @@ a{
   display: block;
   text-decoration: none;
 }
+a:hover{
+  background-color: rgba(255, 255, 255, 0.589);
+}
 
 a:visited{
   color: aliceblue;
@@ -66,9 +74,9 @@ a:visited{
 
 #time{
   position: absolute;
-  top: 100px;
-  right: 570px;
-  font-size: 40px;
+  top: 50px;
+  right:650px;
+  font-size: 90px;
 }
 
   
@@ -139,5 +147,21 @@ a:visited{
   
   .hide {
     display: none;
+  }
+  .bonus{
+
+    border: 1px solid hsl(var(--hue), 100%, 30%);
+    background: linear-gradient(45deg, navy, cyan);
+    border-radius: 5px;
+    padding: 15px 30px;
+    color: white;
+    outline: none;
+    font-size: 1.2rem;
+    margin: 5px;
+
+  }
+
+  .bonus:hover{
+    background:rgba(0, 0, 128, 0.833);
   }
 
